objects/X7S_Onboarding_Activity__c/X7S_Onboarding_Activity__c.object-meta.xml
<CustomObject>
    <description>Track which topics and groups are selected by users for reporting purposes.</description>
    <label>Onboarding Activity</label>
    <nameField>
        <displayFormat>OA-{00000}</displayFormat>
        <label>Activity ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Onboarding Activities</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>