objects/X7S_Onboarding_Activity__c/fields/Action_Type__c.field-meta.xml
<CustomField>
    <fullName>Action_Type__c</fullName>
    <inlineHelpText>Onboarding action type (e.g., join, leave, follow, unfollow, etc.)</inlineHelpText>
    <label>Action Type</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Activity_Type__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Follow</fullName>
            </value>
            <value>
                <fullName>Unfollow</fullName>
            </value>
            <value>
                <fullName>Join</fullName>
            </value>
            <value>
                <fullName>Leave</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>