objects/X7S_Onboarding_Activity__c/fields/Community_Id__c.field-meta.xml
<CustomField>
    <fullName>Community_Id__c</fullName>
    <inlineHelpText>Community (to identify the community in a multi-community org)</inlineHelpText>
    <label>Community Id</label>
    <length>18</length>
    <type>Text</type>
</CustomField>