objects/X7S_Onboarding_Activity__c/fields/Entity_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Entity_Record_ID__c</fullName>
    <inlineHelpText>Entity (the actual item being followed / subscribed to)</inlineHelpText>
    <label>Entity Record ID</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>