objects/X7S_Onboarding_Activity__c/fields/Process_Name__c.field-meta.xml
<CustomField>
    <fullName>Process_Name__c</fullName>
    <inlineHelpText>The related Onboarding MDT.</inlineHelpText>
    <label>Process Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>