objects/X7S_Onboarding_Activity__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Entity_Record_ID__c</columns>
    <columns>Activity_Type__c</columns>
    <columns>Action_Type__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>